--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -87,14 +87,14 @@
 							applications, Java EE application servers, Enterprise OSGi
 							containers, etc.
 						</div>
-						<!-- <div class="tab-pane fade" id="bootstrap" role="tabpanel"
+						<div class="tab-pane fade" id="bootstrap" role="tabpanel"
 							aria-labelledby="list-bootstrap-list">
 							<a href="https://getbootstrap.com/">Bootstrap</a> is an open
 							source toolkit for developing with HTML, CSS, and JS. Quickly
 							prototype your ideas or build your entire app with our Sass
 							variables and mixins, responsive grid system, extensive prebuilt
 							components, and powerful plugins built on jQuery.
-						</div> -->
+						</div>
 					</div>
 				</div>
 			</div>
