--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -12,9 +12,23 @@
 		</ul>
 		
 		<ul class="nav nav-pills flex-column">
-			<li class="nav-item"><a class="nav-link" href="/vendas/pdv">
-				<i class="oi oi-cart"></i> <span>PDV</span>
+			<li class="nav-item"><a
+				class="nav-link d-flex justify-content-between align-items-center"
+				data-bs-toggle="collapse" href="#menuVendas" role="button"
+				aria-expanded="false" aria-controls="menuVendas"> <span><i
+						class="oi oi-box"></i> Vendas</span> <i class="oi oi-chevron-bottom"></i>
 			</a></li>
+
+			<div class="collapse ps-3" id="menuVendas">
+				<ul class="nav flex-column mt-1">
+					<li class="nav-item"><a class="nav-link"
+						th:href="@{/vendas/pdv}"> <i class="oi oi-cart"></i> <span>PDV</span>
+					</a></li>
+					<li class="nav-item"><a class="nav-link"
+						href="/vendas/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar Vendas</span>
+					</a></li>
+				</ul>
+			</div>
 		</ul>
 
 		<ul class="nav nav-pills flex-column">
@@ -27,9 +41,6 @@
 
 			<div class="collapse ps-3" id="menuProdutos">
 				<ul class="nav flex-column mt-1">
-					<li class="nav-item"><a class="nav-link"
-						th:href="@{/vendas/pdv}"> <i class="oi oi-cart"></i> <span>PDV</span>
-					</a></li>
 					<li class="nav-item"><a class="nav-link"
 						href="/produtos/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar</span>
 					</a></li>
