Adicionado algumas funções como classe de insumo e suas tela

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -10,7 +10,7 @@
 					class="oi oi-home"></i> <span>Início</span>
 			</a></li>
 		</ul>
-		
+
 		<ul class="nav nav-pills flex-column">
 			<li class="nav-item"><a
 				class="nav-link d-flex justify-content-between align-items-center"
@@ -24,8 +24,8 @@
 					<li class="nav-item"><a class="nav-link"
 						th:href="@{/vendas/pdv}"> <i class="oi oi-cart"></i> <span>PDV</span>
 					</a></li>
-					<li class="nav-item"><a class="nav-link"
-						href="/vendas/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar Vendas</span>
+					<li class="nav-item"><a class="nav-link" href="/vendas/listar">
+							<i class="oi oi-spreadsheet"></i> <span>Listar Vendas</span>
 					</a></li>
 				</ul>
 			</div>
@@ -87,6 +87,26 @@
 					<li class="nav-item"><a class="nav-link"
 						href="/departamentos/listar"> <i class="oi oi-spreadsheet"></i>
 							<span>Listar</span>
+					</a></li>
+				</ul>
+			</div>
+		</ul>
+		
+		<ul class="nav nav-pills flex-column">
+			<li class="nav-item"><a
+				class="nav-link d-flex justify-content-between align-items-center"
+				data-bs-toggle="collapse" href="#menuInsumos" role="button"
+				aria-expanded="false" aria-controls="menuInsumos"> <span><i
+						class="oi oi-spreadsheet"></i> Insumo </span> <i class="oi oi-chevron-bottom"></i>
+			</a></li>
+
+			<div class="collapse ps-3" id="menuInsumos">
+				<ul class="nav flex-column mt-1">
+					<li class="nav-item"><a class="nav-link"
+						href="/insumos/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar</span>
+					</a></li>
+					<li class="nav-item"><a class="nav-link" href="/insumos/listar">
+							<i class="oi oi-spreadsheet"></i> <span>Listar</span>
 					</a></li>
 				</ul>
 			</div>
