implementado o CRUD para a Receita

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -50,56 +50,14 @@
 				</ul>
 			</div>
 		</ul>
-
-		<ul class="nav nav-pills flex-column">
-			<li class="nav-item"><a
-				class="nav-link d-flex justify-content-between align-items-center"
-				data-bs-toggle="collapse" href="#menuCategorias" role="button"
-				aria-expanded="false" aria-controls="menuCategorias"> <span><i
-						class="oi oi-tags"></i> Categorias</span> <i class="oi oi-chevron-bottom"></i>
-			</a></li>
-
-			<div class="collapse ps-3" id="menuCategorias">
-				<ul class="nav flex-column mt-1">
-					<li class="nav-item"><a class="nav-link"
-						href="/categorias/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar</span>
-					</a></li>
-					<li class="nav-item"><a class="nav-link"
-						href="/categorias/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar</span>
-					</a></li>
-				</ul>
-			</div>
-		</ul>
-		<ul class="nav nav-pills flex-column">
-			<li class="nav-item"><a
-				class="nav-link d-flex justify-content-between align-items-center"
-				data-bs-toggle="collapse" href="#menuDepartamentos" role="button"
-				aria-expanded="false" aria-controls="menuDepartamentos"> <span><i
-						class="oi oi-briefcase"></i> Departamentos</span> <i
-					class="oi oi-chevron-bottom"></i>
-			</a></li>
-
-			<div class="collapse ps-3" id="menuDepartamentos">
-				<ul class="nav flex-column mt-1">
-					<li class="nav-item"><a class="nav-link"
-						href="/departamentos/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar</span>
-					</a></li>
-					<li class="nav-item"><a class="nav-link"
-						href="/departamentos/listar"> <i class="oi oi-spreadsheet"></i>
-							<span>Listar</span>
-					</a></li>
-				</ul>
-			</div>
-		</ul>
-
-		<ul class="nav nav-pills flex-column">
+				<ul class="nav nav-pills flex-column">
 
 			<!-- Item principal Insumo com submenu -->
 			<li class="nav-item"><a
 				class="nav-link d-flex justify-content-between align-items-center"
 				data-bs-toggle="collapse" href="#menuInsumos" role="button"
 				aria-expanded="false" aria-controls="menuInsumos"> <span><i
-						class="oi oi-spreadsheet"></i> Insumo </span> <i
+						class="oi oi-spreadsheet"></i> Insumos Geral </span> <i
 					class="oi oi-chevron-bottom"></i>
 			</a></li>
 
@@ -164,7 +122,46 @@
 
 		</ul>
 
+		<ul class="nav nav-pills flex-column">
+			<li class="nav-item"><a
+				class="nav-link d-flex justify-content-between align-items-center"
+				data-bs-toggle="collapse" href="#menuCategorias" role="button"
+				aria-expanded="false" aria-controls="menuCategorias"> <span><i
+						class="oi oi-tags"></i> Categorias</span> <i class="oi oi-chevron-bottom"></i>
+			</a></li>
 
+			<div class="collapse ps-3" id="menuCategorias">
+				<ul class="nav flex-column mt-1">
+					<li class="nav-item"><a class="nav-link"
+						href="/categorias/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar</span>
+					</a></li>
+					<li class="nav-item"><a class="nav-link"
+						href="/categorias/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar</span>
+					</a></li>
+				</ul>
+			</div>
+		</ul>
+		<ul class="nav nav-pills flex-column">
+			<li class="nav-item"><a
+				class="nav-link d-flex justify-content-between align-items-center"
+				data-bs-toggle="collapse" href="#menuDepartamentos" role="button"
+				aria-expanded="false" aria-controls="menuDepartamentos"> <span><i
+						class="oi oi-briefcase"></i> Departamentos</span> <i
+					class="oi oi-chevron-bottom"></i>
+			</a></li>
+
+			<div class="collapse ps-3" id="menuDepartamentos">
+				<ul class="nav flex-column mt-1">
+					<li class="nav-item"><a class="nav-link"
+						href="/departamentos/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar</span>
+					</a></li>
+					<li class="nav-item"><a class="nav-link"
+						href="/departamentos/listar"> <i class="oi oi-spreadsheet"></i>
+							<span>Listar</span>
+					</a></li>
+				</ul>
+			</div>
+		</ul>
 
 		<ul class="nav nav-pills flex-column">
 			<li class="nav-item"><a
