Adicionado a view para a classe de inumos

--- a/src/main/resources/templates/insumo/cadastro.html
+++ b/src/main/resources/templates/insumo/cadastro.html
@@ -1,58 +1,66 @@
 <!DOCTYPE html>
 <html layout:decorate="~{layout}">
-<head><meta charset="UTF-8"/></head>
+<head>
+<meta charset="UTF-8" />
+</head>
 <body>
-	
-	    <section class="layout-content" layout:fragment="corpo">
-	
-	        <nav class="navbar navbar-expand-md bg-light">
-	            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-	                <ul class="navbar-nav mr-auto">
-	                    <li class="nav-item active">
-	                        <i class="oi oi-caret-right"></i>
-	                        <span>Cadastrar Insumos</span>
-	                    </li>
-	                </ul>
-	                <a class="btn btn-primary btn-md" href="/insumos/listar" role="button">
-	                    <span class="oi oi-spreadsheet" title="Listar" aria-hidden="true"></span>
-	                    <span>Listar Insumos</span>
-	                </a>
-	            </div>
-	        </nav>
-	
-	        <div class="container" id="cadastro">
-	        
-	        	<div th:replace="fragments/alert"></div> 
-	        	
-	            <form th:action="${insumo.id == null} ? @{/insumos/salvar} : @{/insumos/editar}" 
-	                  th:object="${insumo}" method="POST">
-	                <div class="form-row">
-	                    <div class="form-group col-md-6">
-	                        <label for="nome">Insumo</label>
-	                        <input type="text" class="form-control" id="nome"
-	                               placeholder="Nome insumo" autofocus="autofocus" th:field="*{nome}"/>
-	                    </div>
-					<div class="form-group col-md-6">
-	                        <label for="unidadeMedida">Peso Total</label>
-	                        <input type="text" class="form-control" id="unidadeMedida"
-	                               placeholder="Quantidade insumo" th:field="*{unidadeMedida}"/>
-	                        <div class="invalid-feedback">
-	
-	                        </div>
-	                    </div>
-	                    <div class="form-group col-md-6">
-	                        <label for="preco">Preço do Produto</label>
-	                        <input type="text" class="form-control" id="preco" data-mask="#.##0,00"
-	                               data-mask-reverse="true" th:field="*{preco}"/>
-	                        <div class="invalid-feedback">
-	
-	                        </div>
-	                    </div>
-	                </div>
-	                <input type="hidden" id="id" th:field="*{id}"/>
-	                <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
-	            </form>
-	        </div>
-	    </section>
+
+	<section class="layout-content" layout:fragment="corpo">
+
+		<nav class="navbar navbar-expand-md bg-light">
+			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active"><i class="oi oi-caret-right"></i>
+						<span>Cadastrar Insumos</span></li>
+				</ul>
+				<a class="btn btn-primary btn-md" href="/insumos/listar"
+					role="button"> <span class="oi oi-spreadsheet" title="Listar"
+					aria-hidden="true"></span> <span>Listar Insumos</span>
+				</a>
+			</div>
+		</nav>
+
+		<div class="container" id="cadastro">
+
+			<div th:replace="fragments/alert"></div>
+
+			<form
+				th:action="${insumo.id == null} ? @{/insumos/salvar} : @{/insumos/editar}"
+				th:object="${insumo}" method="POST">
+				<div class="form-row">
+					<div class="form-group col-md-4">
+						<label for="nome">Insumo</label> <input type="text"
+							class="form-control" id="nome" placeholder="Nome insumo"
+							autofocus="autofocus" th:field="*{nome}" />
+					</div>
+					<div class="form-group col-md-3">
+						<label for="peso">Peso Total</label> <input type="text"
+							class="form-control" id="peso" placeholder="Quantidade insumo"
+							th:field="*{peso}" />
+						<div class="invalid-feedback"></div>
+					</div>
+					<div class="form-group col-md-4">
+						<label for="unidadeDeMedida">Unidade de Medida</label> <select
+							class="form-control" id="unidadeDeMedida"
+							th:field="*{unidadeMedida}">
+							<option value="">Selecione...</option>
+							<option th:each="unidade : ${unidadeDeMedidas}"
+								th:value="${unidade.name()}"
+								th:text="${unidade.unidadeDeMedida}"></option>
+						</select>
+					</div>
+					<div class="form-group col-md-3">
+						<label for="preco">Preço do Produto</label> <input type="text"
+							class="form-control" id="preco" data-mask="#.##0,00"
+							data-mask-reverse="true" th:field="*{preco}" />
+						<div class="invalid-feedback"></div>
+
+					</div>
+				</div>
+				<input type="hidden" id="id" th:field="*{id}" />
+				<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+			</form>
+		</div>
+	</section>
 </body>
 </html>
