--- a/src/main/resources/templates/insumo/lista.html
+++ b/src/main/resources/templates/insumo/lista.html
@@ -31,6 +31,7 @@
 	                        <th>#</th>
 	                        <th>Nome</th>
 	                        <th>Peso</th>
+	                        <th>Unidade De Medida</th>
 	                        <th>Preço</th>
 	                    </tr>
 	                    </thead>
@@ -38,6 +39,7 @@
 		                    <tr th:each="i : ${insumos}">
 		                        <td th:text="${i.id}">3</td>
 		                        <td th:text="${i.nome}"></td>
+		                        <td th:text="${i.peso}"></td>
 		                        <td th:text="${i.unidadeMedida}"></td>
 		                        <td th:text="${i.preco}"></td>
 		                        <td colspan="2">
