--- a/src/main/resources/templates/cargo/cadastro.html
+++ b/src/main/resources/templates/cargo/cadastro.html
@@ -2,48 +2,47 @@
 <html layout:decorate="~{layout}">
 <head><meta charset="UTF-8"/></head>
 <body>
-	    <section class="layout-content" layout:fragment="corpo">
-	
-	        <nav class="navbar navbar-expand-md bg-light">
-	            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-	                <ul class="navbar-nav mr-auto">
-	                    <li class="nav-item active">
-	                        <i class="oi oi-caret-right"></i>
-	                        <span>Cadastrar Cargos</span>
-	                    </li>
-	                </ul>
-	            </div>
-	            <a class="btn btn-primary btn-md" href="/cargos/listar" role="button">
-	                <span class="oi oi-spreadsheet" title="Cadastro" aria-hidden="true"></span>
-	                <span>Listar Cargos</span>
-	            </a>
-	        </nav>
-	
-	        <div class="container" id="cadastro">
-	        	
-	        	<div th:replace="fragments/alert"></div>
-	           
-	            <form th:action="${cargo.id == null} ? @{/cargos/salvar} : @{/cargos/editar}" 
-	                  th:object="${cargo}" method="POST">
-	                <div class="form-row">
-	                    <div class="form-group col-md-6">
-	                        <label for="nome">Nome do Cargo</label>
-	                        <input type="text" class="form-control" id="nome" placeholder="Nome Cargo" 
-	                        		autofocus="autofocus" th:field="*{nome}"/>
-	                    </div>
-	                    <div class="form-group col-md-4">
-	                        <label for="departamento">Departamento</label>
-	                        <select id="departamento" class="form-control" th:field="*{departamento}">
-	                            <option value="">Selecione</option>
-	                            <option th:each="d : ${departamentos}" 
-	                                    th:value="${d.id}" th:text="${d.nome}">Administração</option>
-	                        </select>
-	                    </div>
-	                </div>
-	                <input type="hidden" id="id" th:field="*{id}"/>
-	                <button type="submit" class="btn btn-primary 	">Salvar</button>
-	            </form>
-	        </div>
-	    </section>
+<section class="layout-content" layout:fragment="corpo">
+    <nav class="navbar navbar-expand-md bg-light">
+        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <i class="oi oi-caret-right"></i>
+                    <span>Cadastrar Receita</span>
+                </li>
+            </ul>
+        </div>
+        <a class="btn btn-primary btn-md" href="/receitas/listar" role="button">
+            <span class="oi oi-spreadsheet" aria-hidden="true"></span> Listar Receitas
+        </a>
+    </nav>
+    <div class="container" id="cadastro">
+        <div th:replace="fragments/alert"></div>
+        <form th:action="@{/receitas/salvar}" th:object="${receita}" method="POST">
+
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="nomeReceita">Nome da Receita</label>
+                    <input type="text" class="form-control" th:field="*{nomeReceita}" id="nomeReceita" placeholder="Nome da receita" autofocus />
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="quantidade">Quantidade</label>
+                    <input type="number" step="0.01" min="0" class="form-control" th:field="*{quantidade}" id="quantidade" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label for="insumos">Insumos</label>
+                <select multiple class="form-control" th:field="*{insumos}" id="insumos">
+                    <option th:each="insumo : ${insumosDisponiveis}" th:value="${insumo.id}" th:text="${insumo.nome}"></option>
+                </select>
+                <small class="form-text text-muted">Selecione os insumos (Ctrl+clique para múltiplos)</small>
+            </div>
+
+            <input type="hidden" th:field="*{id}" />
+            <button type="submit" class="btn btn-primary">Salvar</button>
+        </form>
+    </div>
+</section>
 </body>
-</html>		
+</html>
