Adiciona as views de cadastrar e listar para as beans Receita

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -50,7 +50,7 @@
 				</ul>
 			</div>
 		</ul>
-				<ul class="nav nav-pills flex-column">
+		<ul class="nav nav-pills flex-column">
 
 			<!-- Item principal Insumo com submenu -->
 			<li class="nav-item"><a
@@ -110,13 +110,12 @@
 					</a>
 						<div class="collapse ps-3" id="submenuReceita">
 							<ul class="nav flex-column mt-1">
-								<li><a class="nav-link" href="/insumos/receita/cadastrar">Cadastrar
-										Receita</a></li>
-								<li><a class="nav-link" href="/insumos/receita/listar">Listar
-										Receitas</a></li>
+								<li class="nav-item"><a class="nav-link"
+									href="/receitas/cadastrar">Cadastrar Receita</a></li>
+								<li class="nav-item"><a class="nav-link"
+									href="/receitas/listar">Listar Receitas</a></li>
 							</ul>
 						</div></li>
-
 				</ul>
 			</div>
 
