--- a/src/main/resources/templates/receita/lista.html
+++ b/src/main/resources/templates/receita/lista.html
@@ -9,13 +9,13 @@
 	                <ul class="navbar-nav mr-auto">
 	                    <li class="nav-item active">
 	                        <i class="oi oi-caret-right"></i>
-	                        <span>Lista de Cargos</span>
+	                        <span>Lista de Receitas</span>
 	                    </li>
 	                </ul>
 	            </div>
 	            <a class="btn btn-primary btn-md" href="/receitas/cadastrar" role="button">
 	                <span class="oi oi-plus" title="Cadastro" aria-hidden="true"></span>
-	                <span>Novo Cargo</span>
+	                <span>Nova Receita</span>
 	            </a>
 	        </nav>
 	
@@ -29,8 +29,7 @@
 	                    <tr>
 	                        <th>#</th>
 	                        <th>Receita</th>
-	                        <th>Insumo</th>
-	                        <th>peso</th>
+	                        <th>Preço Unitário</th>
 	                        <th>Ação</th>
 	                    </tr>
 	                    </thead>
@@ -38,7 +37,6 @@
 		                    <tr th:each="in : ${receitas}">
 		                        <td th:text="${in.id}"></td>
 		                        <td th:text="${in.nome}"></td>
-		                        <td th:text="${in.insumo.nome}"></td>
 		                        <td colspan="2">
 		                            <a class="btn btn-info btn-sm" th:href="@{/receitas/editar/{id} (id=${in.id}) }" role="button">
 		                                <span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
