--- a/src/main/resources/templates/receita/cadastro.html
+++ b/src/main/resources/templates/receita/cadastro.html
@@ -52,7 +52,7 @@
 						<label for="rendimento">Rendimento</label> <input type="text"
 							class="form-control" id="rendimento"
 							placeholder="Rendimento-Recita" autofocus="autofocus"
-							th:field="*{quantidade}" />
+							th:field="*{rendimento}" />
 					</div>
 					<div class="form-group col-md-1">
 						<button type="button" class="btn btn-success"
