--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -14,7 +14,7 @@
 		<ul class="nav nav-pills flex-column">
 			<li class="nav-item"><a
 				class="nav-link d-flex justify-content-between align-items-center"
-				data-bs-toggle="collapse" href="#menuVendas" role="button"
+				data-toggle="collapse" href="#menuVendas" role="button"
 				aria-expanded="false" aria-controls="menuVendas"> <span><i
 						class="oi oi-box"></i> Vendas</span> <i class="oi oi-chevron-bottom"></i>
 			</a></li>
@@ -34,7 +34,7 @@
 		<ul class="nav nav-pills flex-column">
 			<li class="nav-item"><a
 				class="nav-link d-flex justify-content-between align-items-center"
-				data-bs-toggle="collapse" href="#menuProdutos" role="button"
+				data-toggle="collapse" href="#menuProdutos" role="button"
 				aria-expanded="false" aria-controls="menuProdutos"> <span><i
 						class="oi oi-box"></i> Produtos</span> <i class="oi oi-chevron-bottom"></i>
 			</a></li>
@@ -55,7 +55,7 @@
 			<!-- Item principal Insumo com submenu -->
 			<li class="nav-item"><a
 				class="nav-link d-flex justify-content-between align-items-center"
-				data-bs-toggle="collapse" href="#menuInsumos" role="button"
+				data-toggle="collapse" href="#menuInsumos" role="button"
 				aria-expanded="false" aria-controls="menuInsumos"> <span><i
 						class="oi oi-spreadsheet"></i> Insumos Geral </span> <i
 					class="oi oi-chevron-bottom"></i>
@@ -68,7 +68,7 @@
 					<!-- Subcategoria Insumo -->
 					<li class="nav-item"><a
 						class="nav-link d-flex justify-content-between align-items-center"
-						data-bs-toggle="collapse" href="#submenuInsumo" role="button"
+						data-toggle="collapse" href="#submenuInsumo" role="button"
 						aria-expanded="false" aria-controls="submenuInsumo"> <span><i
 								class="oi oi-box"></i> Insumo</span> <i class="oi oi-chevron-bottom"></i>
 					</a>
@@ -84,7 +84,7 @@
 					<!-- Subcategoria Tabela Nutricional -->
 					<li class="nav-item"><a
 						class="nav-link d-flex justify-content-between align-items-center"
-						data-bs-toggle="collapse" href="#submenuTabelaNutricional"
+						data-toggle="collapse" href="#submenuTabelaNutricional"
 						role="button" aria-expanded="false"
 						aria-controls="submenuTabelaNutricional"> <span><i
 								class="oi oi-list"></i> Tabela Nutricional</span> <i
@@ -104,7 +104,7 @@
 					<!-- Subcategoria Receita -->
 					<li class="nav-item"><a
 						class="nav-link d-flex justify-content-between align-items-center"
-						data-bs-toggle="collapse" href="#submenuReceita" role="button"
+						data-toggle="collapse" href="#submenuReceita" role="button"
 						aria-expanded="false" aria-controls="submenuReceita"> <span><i
 								class="oi oi-book"></i> Receita</span> <i class="oi oi-chevron-bottom"></i>
 					</a>
@@ -124,7 +124,7 @@
 		<ul class="nav nav-pills flex-column">
 			<li class="nav-item"><a
 				class="nav-link d-flex justify-content-between align-items-center"
-				data-bs-toggle="collapse" href="#menuCategorias" role="button"
+				data-toggle="collapse" href="#menuCategorias" role="button"
 				aria-expanded="false" aria-controls="menuCategorias"> <span><i
 						class="oi oi-tags"></i> Categorias</span> <i class="oi oi-chevron-bottom"></i>
 			</a></li>
@@ -143,7 +143,7 @@
 		<ul class="nav nav-pills flex-column">
 			<li class="nav-item"><a
 				class="nav-link d-flex justify-content-between align-items-center"
-				data-bs-toggle="collapse" href="#menuDepartamentos" role="button"
+				data-toggle="collapse" href="#menuDepartamentos" role="button"
 				aria-expanded="false" aria-controls="menuDepartamentos"> <span><i
 						class="oi oi-briefcase"></i> Departamentos</span> <i
 					class="oi oi-chevron-bottom"></i>
@@ -165,7 +165,7 @@
 		<ul class="nav nav-pills flex-column">
 			<li class="nav-item"><a
 				class="nav-link d-flex justify-content-between align-items-center"
-				data-bs-toggle="collapse" href="#menuCargos" role="button"
+				data-toggle="collapse" href="#menuCargos" role="button"
 				aria-expanded="false" aria-controls="menuCargos"> <span><i
 						class="oi oi-people"></i> Cargos</span> <i class="oi oi-chevron-bottom"></i>
 			</a></li>
@@ -185,7 +185,7 @@
 		<ul class="nav nav-pills flex-column">
 			<li class="nav-item"><a
 				class="nav-link d-flex justify-content-between align-items-center"
-				data-bs-toggle="collapse" href="#menuFuncionarios" role="button"
+				data-toggle="collapse" href="#menuFuncionarios" role="button"
 				aria-expanded="false" aria-controls="menuFuncionarios"> <span><i
 						class="oi oi-person"></i> Funcionários</span> <i
 					class="oi oi-chevron-bottom"></i>
