--- a/src/main/resources/templates/insumo/cadastro.html
+++ b/src/main/resources/templates/insumo/cadastro.html
@@ -13,7 +13,7 @@
 					<li class="nav-item active"><i class="oi oi-caret-right"></i>
 						<span>Cadastrar Insumos</span></li>
 				</ul>
-				<a class="btn btn-primary btn-md" href="/insumos/listar"
+				<a class="btn btn-novo-listar btn-md" href="/insumos/listar"
 					role="button"> <span class="oi oi-spreadsheet" title="Listar"
 					aria-hidden="true"></span> <span>Listar Insumos</span>
 				</a>
@@ -58,7 +58,7 @@
 					</div>
 				</div>
 				<input type="hidden" id="id" th:field="*{id}" />
-				<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+				<button type="submit" class="btn btn-novo-listar btn-md">Salvar</button>
 			</form>
 		</div>
 	</section>
