--- a/src/main/resources/templates/produto/lista.html
+++ b/src/main/resources/templates/produto/lista.html
@@ -13,7 +13,7 @@
 					<li class="nav-item active"><i class="oi oi-et-right"></i>
 						<span>Lista de Produtos</span></li>
 				</ul>
-				<a class="btn btn-primary btn-md" href="/produtos/cadastrar"
+				<a class="btn btn-novo-listar btn-md" href="/produtos/cadastrar"
 					role="button"> <span class="oi oi-plus" title="Cadastro"
 					aria-hidden="true"></span> <span>Cadastrar Produtos</span>
 				</a>
