--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8,23 +8,23 @@ html, body {
 body {
 	padding-top: 56px;
 	padding-left: 0;
-} 
+}
 
 /*
  * main layout
  */
 .layout-main {
-    display: flex;
-    min-height: calc(100vh - 52px);
-    overflow: hidden;
+	display: flex;
+	min-height: calc(100vh - 52px);
+	overflow: hidden;
 }
 
 /*
  * Content
  */
 .layout-content {
-    width: 100%;
-    padding-top: 0px;
+	width: 100%;
+	padding-top: 0px;
 }
 
 .container {
@@ -36,14 +36,14 @@ body {
  * Sidebar
  */
 .sidebar {
-    width: 0px;
-    height: 100vh;
-    border-top: 1px solid #eee;
-    border-right: 1px solid #eee;    
-    background-color: #f8f9fa;
-    flex-shrink: 0;
-    overflow: hidden;
-    transition: width .5s;
+	width: 0px;
+	height: 100vh;
+	border-top: 1px solid #eee;
+	border-right: 1px solid #eee;
+	background-color: #f9f3ea;
+	flex-shrink: 0;
+	overflow: hidden;
+	transition: width .5s;
 }
 
 .sidebar .nav {
@@ -60,26 +60,26 @@ body {
 
 .sidebar .nav-link {
 	border-radius: 0;
-} 
-
-.sidebar ul li:hover a, .menu ul li.active a{
-    color: #777777;
 }
 
-.sidebar ul{
-    list-style: none;
-    padding: 10px 0px;
+.sidebar ul li:hover a, .menu ul li.active a {
+	color: #777777;
 }
 
-.sidebar ul li a{
-    display: block;
-    color:#1a1a1a;
-    padding: 10px 15px;
-    white-space: nowrap;
+.sidebar ul {
+	list-style: none;
+	padding: 10px 0px;
+}
+
+.sidebar ul li a {
+	display: block;
+	color: #1a1a1a;
+	padding: 10px 15px;
+	white-space: nowrap;
 }
 
 .sidebar.sidebar-open {
-    width: 300px;
+	width: 300px;
 }
 
 /*
@@ -92,18 +92,17 @@ body {
 
 /*
  * toogle do navbar do menu
- */ 
-
+ */
 .navbar-toggle {
-    display: inline-block;
-    margin-left: 10px;
+	display: inline-block;
+	margin-left: 10px;
 }
 
 /*
  * Footer
  */
 .layout-footer {
-	position: fixed;
+	position: static;
 	left: 0;
 	right: 0;
 	bottom: 0;
@@ -117,4 +116,37 @@ body {
 	display: block;
 	color: #777777;
 	text-align: center;
+}
+
+.navbar-pastel {
+	background-color: #ead9b7; /* tom pastel */
+}
+
+.btn-novo-listar {
+    background-color: #3f1c1f;
+    border-color: #3f1c1f;
+    color: #fff;
+    text-decoration: none;
+}
+
+.btn-novo-listar:hover,
+.btn-novo-listar:focus {
+    background-color: #2e1416; /* tom mais escuro */
+    border-color: #2e1416;
+    color: #fff;              /* mantém branco */
+    text-decoration: none;
+}
+
+.btn-novo-listar:active {
+    background-color: #241012;
+    border-color: #241012;
+    color: #fff;
+}
+.btn-trentin span {
+    color: inherit;
+}
+.navbar-brand {
+    font-family: 'Playfair Display', serif;
+    font-weight: 700;
+    letter-spacing: 1px;
 }
