--- a/src/main/resources/templates/cargo/cadastro.html
+++ b/src/main/resources/templates/cargo/cadastro.html
@@ -13,7 +13,7 @@
 	                    </li>
 	                </ul>
 	            </div>
-	            <a class="btn btn-primary btn-md" href="/cargos/listar" role="button">
+	            <a class="btn btn-novo-listar btn-md" href="/cargos/listar" role="button">
 	                <span class="oi oi-spreadsheet" title="Cadastro" aria-hidden="true"></span>
 	                <span>Listar Cargos</span>
 	            </a>
@@ -41,7 +41,7 @@
 	                    </div>
 	                </div>
 	                <input type="hidden" id="id" th:field="*{id}"/>
-	                <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+	                <button type="submit" class="btn btn-novo-listar btn-md">Salvar</button>
 	            </form>
 	        </div>
 	    </section>
