--- a/src/main/resources/templates/categoria/cadastro.html
+++ b/src/main/resources/templates/categoria/cadastro.html
@@ -13,7 +13,7 @@
 	                        <span>Cadastrar Categorias</span>
 	                    </li>
 	                </ul>
-	                <a class="btn btn-primary btn-md" href="/categorias/listar" role="button">
+	                <a class="btn btn-novo-listar btn-md" href="/categorias/listar" role="button">
 	                    <span class="oi oi-spreadsheet" title="Listar" aria-hidden="true"></span>
 	                    <span>Listar Categorias</span>
 	                </a>
@@ -34,7 +34,7 @@
 	                    </div>
 	                </div>
 	                <input type="hidden" id="id" th:field="*{id}"/>
-	                <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+	                <button type="submit" class="btn btn-novo-listar btn-md">Salvar</button>
 	            </form>
 	        </div>
 	    </section>
