--- a/src/main/resources/templates/departamento/lista.html
+++ b/src/main/resources/templates/departamento/lista.html
@@ -13,7 +13,7 @@
 	                        <span>Lista de Departamentos</span>
 	                    </li>
 	                </ul>
-	                <a class="btn btn-primary btn-md" href="/departamentos/cadastrar" role="button">
+	                <a class="btn btn-novo-listar btn-md" href="/departamentos/cadastrar" role="button">
 	                    <span class="oi oi-plus" title="Cadastro" aria-hidden="true"></span>
 	                    <span>Novo Departamento</span>
 	                </a>
