--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head><meta charset="UTF-8"></head>
-<body>
-	<header th:fragment="cabecalho">
-		<nav class="navbar navbar-inverse navbar navbar-dark bg-dark fixed-top">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="btn btn-dark navbar-toggle pull-left">
-						<i class="oi oi-menu"></i>
-					</button>
-					<a class="navbar-brand " href="#">TITULO A SER ADICIONADO!</a>
-				</div>
-			</div>
-		</nav>
-	</header>
-</body>
-</html>
+<header th:fragment="cabecalho">
+	<nav class="navbar navbar-light navbar-pastel fixed-top">
+		<div class="container-fluid">
+
+			<button class="navbar-toggler mr-2" type="button">
+				<span class="oi oi-menu"></span>
+			</button>
+
+
+			<a class="navbar-brand mr-auto" href="#"> PANIFICADORA TRENTIN LTDA </a>
+
+		</div>
+	</nav>
+</header>
