--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-<title>Panificadora Trentin</title>
+<title>Spring-Boot Básico</title>
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport"
@@ -40,49 +40,53 @@
 	<footer th:replace="fragments/footer :: rodape">
 		<div>footer</div>
 	</footer>
-	<section layout:fragment="scripts">
-		<!-- Bootstrap core JavaScript
+	
+	<!-- Bootstrap core JavaScript
     ================================================== -->
-		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="/webjars/jquery/jquery.min.js"></script>
-		<script src="/webjars/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-		<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-		<script src="/webjars/jquery/jquery.min.js"></script>
-		<script type="text/javascript">
-			var url = '';
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="/webjars/jquery/jquery.min.js"></script>
+	<script src="/webjars/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
+	<script src="/webjars/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script type="text/javascript">
+	
+	$(function () {
 
-			$('button[id*="btn_"]').click(
-					function() {
-						url = "http://localhost:8080/"
-								+ $(this).attr('id').split("_")[1];
-					});
+	    // Sidebar (Bootstrap 4)
+	    $('.navbar-toggler').on('click', function () {
+	        $('.sidebar').toggleClass('sidebar-open');
+	    });
 
-			$('#ok_confirm').click(function() {
-				document.location.href = url;
-			});
+	    $(function () {
+	        $('[data-toggle="popover"]').popover({
+	            trigger: 'click',
+	            html: true,
+	            container: 'body'
+	        });
 
-			$(function() {
-				$('[data-toggle="popover"]').popover();
-			});
+	        // Fecha ao clicar fora
+	        $(document).on('click', function (e) {
+	            $('[data-toggle="popover"]').each(function () {
+	                if (!$(this).is(e.target) &&
+	                    $(this).has(e.target).length === 0 &&
+	                    $('.popover').has(e.target).length === 0) {
+	                    $(this).popover('hide');
+	                }
+	            });
+	        });
+	    });
 
-			$(document).ready(function() {
+	    // Modal excluir
+	    let url = '';
+	    $('button[id*="btn_"]').on('click', function () {
+	        url = "http://localhost:8080/" + $(this).attr('id').split("_")[1];
+	    });
 
-				setTimeout(function() {
-					$(".alert").fadeOut("slow", function() {
-						$(this).alert('close');
-					});
-					$(".alert").alert('close');
-				}, 5000);
+	    $('#ok_confirm').on('click', function () {
+	        document.location.href = url;
+	    });
 
-				$(".navbar-toggle").click(function() {
-					$(".sidebar").toggleClass("sidebar-open");
-				})
-			});
-		</script>
-	</section>
+	});
+	</script>
+	<section layout:fragment="scripts"></section>
 </body>
 </html>
