--- a/src/main/resources/templates/produto/cadastro.html
+++ b/src/main/resources/templates/produto/cadastro.html
@@ -13,7 +13,7 @@
 						<span>Cadastrar Produtos</span></li>
 				</ul>
 			</div>
-			<a class="btn btn-primary btn-md" href="/produtos/listar"
+			<a class="btn btn-novo-listar btn-md" href="/produtos/listar"
 				role="button"> <span class="oi oi-spreadsheet" title="Cadastro"
 				aria-hidden="true"></span> <span>Listar Produtos</span>
 			</a>
@@ -71,7 +71,7 @@
 
 				<input type="hidden" id="id" th:field="*{id}" />
 
-				<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+				<button type="submit" class="btn btn-novo-listar btn-md">Salvar</button>
 			</form>
 		</div>
 	</section>
