--- a/src/main/resources/templates/receita/lista.html
+++ b/src/main/resources/templates/receita/lista.html
@@ -13,7 +13,7 @@
 						<span>Lista de Receitas</span></li>
 				</ul>
 			</div>
-			<a class="btn btn-primary btn-md" href="/receitas/cadastrar"
+			<a class="btn btn-novo-listar btn-md" href="/receitas/cadastrar"
 				role="button"> <span class="oi oi-plus" title="Cadastro"
 				aria-hidden="true"></span> <span>Nova Receita</span>
 			</a>
@@ -35,19 +35,26 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="in : ${receitas}">
-							<td th:text="${in.id}"></td>
-							<td th:text="${in.nome}"></td>
-							<td th:text="${#numbers.formatCurrency(in.custoTotal)}"></td>
-							<td th:text="${#numbers.formatCurrency(in.custoUnitario)}"></td>
+						<tr th:each="r: ${receitas}">
+							<td th:text="${r.id}"></td>
+							<td th:text="${r.nome}"></td>
+							<td th:text="${#numbers.formatCurrency(r.custoTotal)}"></td>
+							<td th:text="${#numbers.formatCurrency(r.custoUnitario)}"></td>
+							<td>
+								<button type="button" class="btn btn-secondary btn-sm"
+									data-toggle="popover" data-placement="right" data-html="true"
+									th:attr="data-content=${r.itensPopover}">
+									<span class="oi oi-eye"></span>
+								</button>
+							</td>
 
 							<td><a class="btn btn-info btn-sm"
-								th:href="@{/receitas/editar/{id}(id=${in.id})}"> <span
+								th:href="@{/receitas/editar/{id}(id=${r.id})}"> <span
 									class="oi oi-brush"></span>
 							</a>
 
 								<button
-									th:id="${#strings.concat('btn_receitas/excluir/', in.id)}"
+									th:id="${#strings.concat('btn_receitas/excluir/', r.id)}"
 									class="btn btn-danger btn-sm" data-toggle="modal"
 									data-target="#myModal">
 									<span class="oi oi-circle-x"></span>
