--- a/src/main/resources/templates/venda/lista.html
+++ b/src/main/resources/templates/venda/lista.html
@@ -12,7 +12,7 @@
 					<li class="nav-item active"><i class="oi oi-caret-right"></i>
 						<span>Lista de Vendas</span></li>
 				</ul>
-				<a class="btn btn-primary btn-md" href="/vendas/pdv" role="button">
+				<a class="btn btn-novo-listar btn-md" href="/vendas/pdv" role="button">
 					<span class="oi oi-plus" title="Nova Venda" aria-hidden="true"></span>
 					<span>Nova Venda</span>
 				</a>
@@ -41,7 +41,7 @@
 								<input class="form-control mr-sm-2" type="search"
 									placeholder="nome do cliente" aria-label="Search"
 									th:name="cliente" />
-								<button class="btn btn-outline-success my-2 my-sm-0">Buscar</button>
+								<button class="btn btn-novo-listar btn-md my-2 my-sm-0">Buscar</button>
 							</form>
 						</nav>
 					</div>
@@ -59,7 +59,7 @@
 									aria-label="Search" th:name="inicio" /> <input
 									class="form-control mr-sm-2" type="date" aria-label="Search"
 									th:name="fim" />
-								<button class="btn btn-outline-success my-2 my-sm-0">Buscar</button>
+								<button class="btn btn-novo-listar btn-md my-2 my-sm-0">Buscar</button>
 							</form>
 						</nav>
 					</div>
