--- a/src/main/resources/templates/venda/pdv.html
+++ b/src/main/resources/templates/venda/pdv.html
@@ -15,7 +15,7 @@
 							de Venda (PDV)</span></li>
 				</ul>
 			</div>
-			<a class="btn btn-primary btn-md" href="/vendas/pdv" role="button">
+			<a class="btn btn-novo-listar btn-md" href="/vendas/pdv" role="button">
 				<span class="oi oi-loop-circular"></span> <span>Nova Venda</span>
 			</a>
 		</nav>
@@ -71,7 +71,7 @@
 								placeholder="Nome do cliente">
 						</div>
 
-						<button type="submit" class="btn btn-primary btn-sm">Finalizar
+						<button type="submit" class="btn btn-novo-listar btn-md">Finalizar
 							Venda</button>
 					</form>
 				</div>
